#99 - created two buttons for start/stop sprint - not finished yet

--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/Buttons/DefaultButtonStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/Buttons/DefaultButtonStyles.xaml
@@ -16,7 +16,7 @@
     <SolidColorBrush x:Key="DefaultButtonPressedBackgroundBrush" Color="{StaticResource PrimaryDarkColor}" />
     <SolidColorBrush x:Key="DefaultButtonPressedForegroundBrush" Color="{StaticResource FontPrimaryColor}" />
 
-    <SolidColorBrush x:Key="DefaultButtonDisabledBackgroundBrush" Color="{StaticResource DisabledColor}" />
+    <SolidColorBrush x:Key="DefaultButtonDisabledBackgroundBrush" Color="{StaticResource PrimaryColor}" />
     <SolidColorBrush x:Key="DefaultButtonDisabledForegroundBrush" Color="{StaticResource FontDisabledColor}" />
 
     <Style
