--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/Buttons/BaseButtonStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/Buttons/BaseButtonStyles.xaml
@@ -15,7 +15,7 @@
         <Setter Property="FontSize" Value="16" />
         <Setter Property="Margin" Value="0" />
         <Setter Property="Padding" Value="20 0" />
-        <Setter Property="Height" Value="42" />
+        <Setter Property="MinHeight" Value="42" />
         <Setter Property="BorderThickness" Value="0" />
 
         <Setter Property="Template">
@@ -25,7 +25,9 @@
                         CornerRadius="2"
                         Background="{TemplateBinding Background}"
                         BorderBrush="{TemplateBinding BorderBrush}"
-                        BorderThickness="{TemplateBinding BorderThickness}">
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        Width="{TemplateBinding Width}"
+                        Height="{TemplateBinding Height}">
 
                         <ContentPresenter
                             Content="{TemplateBinding Content}"
