--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/StopIconStyle.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/StopIconStyle.xaml
@@ -18,13 +18,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:styles="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Styles">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Constants.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <Style TargetType="{x:Type Control}" x:Key="StopIconStyle">
+    <Style TargetType="{x:Type styles:StopIcon}">
         <Setter Property="Foreground" Value="OrangeRed" />
         <Setter Property="Background" Value="Transparent" />
 
@@ -42,25 +43,34 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                             Background="{TemplateBinding Background}"
                             Margin="{TemplateBinding Padding}">
 
-                            <Ellipse
-                                Width="32"
-                                Height="32"
-                                Fill="{TemplateBinding Foreground}"
-                                StrokeLineJoin="Round"
-                                StrokeStartLineCap="Flat"
-                                StrokeEndLineCap="Flat"
-                                Opacity="1" />
-
                             <Path
-                                Data="M 10 10 L 22 10 22 22 10 22 Z"
-                                StrokeThickness="3"
-                                StrokeLineJoin="Round"
-                                Stroke="WhiteSmoke"
-                                Fill="WhiteSmoke" />
+                                Fill="{TemplateBinding Foreground}"
+                                Stroke="{TemplateBinding Foreground}">
+
+                                <Path.Data>
+                                    <CombinedGeometry GeometryCombineMode="Exclude">
+
+                                        <CombinedGeometry.Geometry1>
+                                            <EllipseGeometry RadiusX="16" RadiusY="16" Center="16,16" />
+                                        </CombinedGeometry.Geometry1>
+
+                                        <CombinedGeometry.Geometry2>
+                                            <PathGeometry Figures="M 10 10 L 22 10 22 22 10 22 Z" />
+                                        </CombinedGeometry.Geometry2>
+
+                                    </CombinedGeometry>
+                                </Path.Data>
+                            </Path>
 
                         </Grid>
 
                     </Viewbox>
+
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="Foreground" Value="{StaticResource IconDisabledBrush}" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
 
                 </ControlTemplate>
             </Setter.Value>
