--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/NotesBlockStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/NotesBlockStyles.xaml
@@ -73,6 +73,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                     </styles:InfoBlock>
 
+                    <ControlTemplate.Triggers>
+                        <DataTrigger Binding="{Binding Items.Count, RelativeSource={RelativeSource Self}}" Value="0">
+                            <Setter Property="Visibility" Value="Collapsed" />
+                        </DataTrigger>
+                    </ControlTemplate.Triggers>
+
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
