--- a/sources/VeloCity.Wpf.Presentation/Pages/SprintCalendar/SprintCalendarView.xaml
+++ b/sources/VeloCity.Wpf.Presentation/Pages/SprintCalendar/SprintCalendarView.xaml
@@ -50,19 +50,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <styles:NotesBlock
             DockPanel.Dock="Bottom"
             ItemsSource="{Binding Notes}"
-            Margin="0 20 0 0">
-
-            <styles:NotesBlock.Style>
-                <Style TargetType="styles:NotesBlock" BasedOn="{StaticResource {x:Type styles:NotesBlock}}">
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding Notes.Count}" Value="0">
-                            <Setter Property="Visibility" Value="Collapsed" />
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </styles:NotesBlock.Style>
-
-        </styles:NotesBlock>
+            Margin="0 20 0 0" />
 
         <DataGrid
             ItemsSource="{Binding CalendarItems}"
